@@ -1,5 +1,6 @@
 
 5.2a1 -> 5.2a2:
+    - jbj: fix: unmatched file/dir path triggers were firing.
     - jbj: fire file trigger patterns symmetrically.
     - jbj: fire trigger patterns against filepaths. still asymmetric, todo++.
     - proyvind: perl: add icon() & icon_url() to RPM::Spec.
@@ -7,7 +8,7 @@
 
 5.1.0 -> 5.2a1:
     - jbj: update osgideps.pl (#466111).
-    - jbj: create absoluabsolute file paths index in rpmdb.
+    - jbj: create absolute file paths index in rpmdb.
     - jbj: fix: he->tag was returning RPMTAG_BASENAMES, not RPMTAG_FILEPATHS.
     - proyvind: install rpmbuild.h & rpmspec.h on system again (needed by urpmi).
     - jbj: avoid mtab info leakage problems (#457940).
